--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 			<section id="page3">
 
-			<video id="door" src="video/Dooropn.mp4" style="z-index: -1;
+			<video id="door" src="images/video/Dooropn.mp4" style="z-index: -1;
 			top: 0;
 			left: 0;
 			width: 100%; 
